# django-mcp-kit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
deploy/: django-mcp.service  gunicorn.conf.py  nginx-mcp.conf
django_mcp_kit/: __init__.py  apps.py  asgi.py  conf.py  dispatcher.py  drf.py  errors.py  models.py  oauth_client.py  permissions.py  registry.py  resources.py  schema.py  services.py  tools.py  urls.py  utils.py
django_mcp_kit/auth/: __init__.py  base.py  bearer.py  oauth.py
django_mcp_kit/management/commands/: create_mcp_oauth_client.py  runserver_mcp.py
django_mcp_kit/transports/: http.py  sdk.py
django_mcp_kit/wagtail_connector/: apps.py  models.py
django_mcp_kit/wagtail_connector/migrations/: 0001_initial.py  0002_alter_mcpconnectorsettings_client_id.py
tests/: conftest.py  settings.py  test_asgi_permissions.py  test_auth.py  test_dispatcher.py  test_drf_models.py  test_errors.py  test_oauth_client.py  test_runserver_mcp.py  test_services.py  test_tools_registry.py  test_transport_sdk.py  test_urls.py  test_wagtail_authz.py  test_wagtail_connector.py  test_wiring.py  urls.py
tests/dummyapp/: api.py  apps.py  mcp_tools.py  models.py  tokens.py
